Cleaned up some error mesages also learned abou tthe field keycard and used it for count.

--- a/C# test bed/C# test bed.csproj
+++ b/C# test bed/C# test bed.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>C__test_bed</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
 </Project>
